--- a/assets/login-style.css
+++ b/assets/login-style.css
@@ -67,5 +67,6 @@ button:hover, .button:hover {
 
 .message {
     text-align: center;
+    color: #fff;
     font-family: 'Courier New', Courier, monospace;
 }
